--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
-		"dev": "ts-node bin/docs-sync.ts"
+		"dev": "ts-node bin/docs-sync.ts",
+		"test": "vitest",
+		"test:run": "vitest run",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"chokidar": "^3.6.0",
@@ -15,7 +18,9 @@
 	},
 	"devDependencies": {
 		"@types/node": "^25.0.3",
+		"@vitest/coverage-v8": "^2.1.8",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"vitest": "^2.1.8"
 	}
 }
