--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"include": ["src", "bin", "package.json", "docs-sync.config.ts"],
-	"exclude": ["node_modules", "dist"],
+	"exclude": ["node_modules", "dist", "**/__tests__", "**/*.test.ts"],
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig to read more about this file */
 		/* Projects */
