--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
 	},
 	"dependencies": {
 		"chokidar": "^3.6.0",
-		"fast-glob": "^3.3.2"
+		"fast-glob": "^3.3.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@types/node": "^25.0.3",
 		"@vitest/coverage-v8": "^2.1.8",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3",
 		"vitest": "^2.1.8"
 	},
 	"publishConfig": {
