--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.8",
 		"@types/node": "^25.0.3",
 		"@vitest/coverage-v8": "^2.1.8",
 		"vitest": "^2.1.8"
